<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Notifly</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading…</string>
    <string name="clear">Clear</string>
    <string name="repeat">Repeat</string>

    <!-- nav drawer -->
    <string name="title_section_notes">Notes</string>
    <string name="title_section_fav_locations">My Locations</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- action bar -->
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_note">New note</string>
    <string name="action_save">Save</string>
    <string name="action_train">Train</string>

    <!-- Service -->
    <string name="local_service_started">Notifly service started!</string>
    <string name="local_service_stopped">Notifly service stopped!</string>

    <!-- note -->
    <string name="title_activity_new_note">New note</string>
    <string name="note_description">Description</string>
    <string name="note_title">Title</string>
    <string name="note_time">Time</string>
    <string name="note_location">Location</string>
    <string name="note_date">Date</string>
    <string name="note_tags">Tags</string>

    <string name="title_activity_select_location">Select Location</string>
    <string name="select_location">Select Location</string>
    <string name="delete_note">Discard note</string>

    <string name="save_location">Save favorite location</string>
    <string name="delete_location">Discard location</string>
    <string name="location_title">Title</string>
    <string name="drag_placeholder">Drag Placeholder</string>

    <!-- Settings main title-->
    <string name="title_activity_settings">Settings</string>

    <!-- Settings categories -->
    <string name="language_region_category_title">Language and Region</string>
    <string name="note_safety_factor_category_title">Note Safety Factor</string>
    <string name="note_interval_category_title">Note Interval</string>

    <!-- Settings keys -->
    <string name="curr_location_preference_key">curr_location_preference</string>
    <string name="time_location_safety_factor_preference_key">time_location_safety_factor_preference</string>
    <string name="time_only_safety_factor_preference_key">time_only_safety_factor_preference</string>
    <string name="location_only_safety_factor_preference_key">location_only_safety_factor_preference</string>
    <string name="general_reminder_interval_preference_key">general_reminder_interval_preference</string>
    <string name="time_only_reminder_interval_preference_key">time_only_reminder_interval_preference</string>
    <string name="location_only_reminder_interval_preference_key">location_only_reminder_interval_preference</string>

    <!-- Settings titles -->
    <string name="current_location_title">Current Location</string>
    <string name="time_location_based_note_safety_factor_title">Time and location based note</string>
    <string name="general_note_title">General note</string>
    <string name="time_only_based_note_title">Time only based note</string>
    <string name="location_based_note_title">Location only based note</string>

    <!-- Settings summaries -->
    <string name="time_location_based_note_safety_factor_summary">Defines the safety factor for time and location based notes</string>
    <string name="time_based_note_safety_factor_summary">Defines the safety factor for time only based notes</string>
    <string name="location_only_based_note_safety_factor_summary">Defines the distance safety factor for location only based notes</string>
    <string name="general_reminder_interval_summary">Defines the reminder interval for notes without location or time</string>
    <string name="time_only_based_reminder_interval_summary">Defines the reminder interval for time only based notes</string>
    <string name="location_only_reminder_interval_summary">Defines the reminder interval for location only based notes</string>
    <string name="current_location_summary">Defines the user\'s current location - affects measure units and date/time format</string>

    <!-- Settings dialog titles -->
    <string name="dialog_curr_location_preference">Define Location</string>
    <string name="dialog_safety_factor_preference">Define Safety Factor</string>
    <string name="dialog_interval_preference">Define Interval</string>

    <!-- Settings countries -->
    <string name="israel">Israel</string>
    <string name="usa">USA</string>

    <!-- Travel Mode -->
    <string name="walking">walking</string>
    <string name="driving">driving</string>
    <string name="bicycling">bicycling</string>
    <string name="transit">transit</string>

    <string name="repetition_interval">Repeat every</string>
    <string name="repetition_start_date">Starts on</string>
    <string name="repetition_end_date">Ends</string>
    <string name="repetition_ends_never">Never</string>
    <string name="repetition_ends_on">On</string>
</resources>
