<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/repeatFragment">


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/repetitionText"
            android:text="@string/repetition_interval"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/intervalEditText"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="2" />

        <Spinner
            android:id="@+id/typeSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/startDateText"
            android:text="@string/repetition_start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/startDateEditText"
            android:inputType="date"
            android:hint="@string/note_date"
            android:focusable="false"
            android:longClickable="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/endDateText"
            android:text="@string/repetition_end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/endLinearLayout"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4">

            <RadioButton
                android:text="@string/repetition_ends_never"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <!--todo: add end choice-->
            <LinearLayout
                android:visibility="gone"
                android:id="@+id/linearLayout4"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:text="@string/repetition_ends_on"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <EditText
                    android:id="@+id/endDateEditText"
                    android:inputType="date"
                    android:focusable="false"
                    android:longClickable="false"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4" />
            </LinearLayout>
        </RadioGroup>
    </LinearLayout>
</LinearLayout>